Mejora mural principal

--- a/profile.html
+++ b/profile.html
@@ -16,36 +16,38 @@
     }
 
     #nav {
-      position: fixed;
-      top:0;
-      width: 100%;
-      list-style-type: none;
-      padding: 0;
-      margin: 0;
-      overflow: hidden;
-      background-color:white;
-      border: 1px solid black;
-      height: 60px;
-    }
+    
+    position: fixed;
+    top:0;
+    width: 100%;
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    overflow: hidden;
+    background-color:#3A3A3A;
+    border: 1px solid black;
+    height: 60px;
+  }
 
-    .navlist {
-      float: left;
-    }
+  .navlist {
+    float: left;
+  }
 
-    .navlist a {
-      display: block;
-      color: black;
-      text-align: center;
-      text-decoration: none;
-      padding: 20px;
-      width: 100px;
-    }
+  .navlist a {
+    display: block;
+    color: white;
+    text-align: center;
+    text-decoration: none;
+    padding: 20px;
+    width: 100px;
+  }
 
-    .navlist a:hover {
-      background-color: black;
-      color: white;
-      border: 1px solid white;
-    }
+  .navlist a:hover {
+    background-color: #DBEDD6;
+    color: black;
+    border: 1px solid white;
+  }
+
     img {
       width: 800px;
       height: 600px;
@@ -68,6 +70,7 @@
     <ul id="nav">
       <li class="navlist"><a href="./index.html">Muro</a></li>
       <li class="navlist"><a href="./profile.html">Perfil</a></li>
+      <li><img src="images/icon.png" alt="icon" style="width: 50px;height: 50px;float: right;margin-top: 5px;margin-right: 10px;"></li>
     </ul>
   </header>
 
