Creada página destacados

--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@
   <ul id="nav">
     <li class="navlist"><a href="./index.html">Muro</a></li>
     <li class="navlist"><a href="./profile.html">Perfil</a></li>
+    <li class="navlist"><a href="./top.html">Destacados</a></li>
     <li><img src="images/icon.png" alt="icon" style="width: 50px;height: 50px;float: right;margin-top: 5px;margin-right: 10px;"></li>
   </ul>
  
