Añadidos perfiles usuarios

--- a/index.html
+++ b/index.html
@@ -147,12 +147,12 @@
       width: 100%;
     }
 
-    #zion {
+    .enlace {
       text-decoration: none;
       color: black;
     }
 
-    #zion:hover{
+    .enlace:hover{
       color: purple;
     }
   </style>
@@ -197,7 +197,7 @@
           <div class="div_art" style="background-color: #fde1d4">
             <img class="img_post" src="./images/perro.jpeg" alt="gato muy gracioso" />
             <p class="text_post">El mejor amigo del hombre</p>
-            <p style="font-size: 90%; text-align: center;margin-top: 0;">@elmejorgolden</p>
+            <p style="font-size: 90%; text-align: center;margin-top: 0;"><a  class="enlace" href="profile2.html">@elmejorgolden</a></p>
             <p class="text_post2">
               <b>DESCRIPCIÓN: </b>
               <br>
@@ -244,7 +244,7 @@
           <div class="div_art" style="background-color: #daeec9">
             <img class="img_post" src="./images/gatoo.jpeg" alt="gato muy gracioso" />
             <p class="text_post">La dupla gatuna</p>
-            <p style="font-size: 90%; text-align: center;margin-top: 0;">@miau2veces</p>
+            <p style="font-size: 90%; text-align: center;margin-top: 0;"><a class="enlace" href="profile3.html">@miau2veces</a> </p>
             <p class="text_post2">
               <b>DESCRIPCIÓN: </b>
               <br>
@@ -289,9 +289,9 @@
         </article>
         <article id="artPajaro" class="articulos">
           <div class="div_art" style="background-color: #e3f2f8">
-            <img class="img_post" src="./images/pajaro.jpeg" alt="gato muy gracioso" />
+            <img class="img_post" src="./images/pajaro.jpeg" alt="Periquitos" />
             <p class="text_post">Este loco nunca calla</p>
-            <p style="font-size: 90%; text-align: center;margin-top: 0;">@cierraelpico</p>
+            <p style="font-size: 90%; text-align: center;margin-top: 0;"> <a  class="enlace" href="profile4.html">@cierraelpico</a></p>
             <p class="text_post2">
               <b>DESCRIPCIÓN: </b>
               <br>
@@ -336,9 +336,9 @@
         </article>
         <article id="artConejo" class="articulos">
           <div class="div_art" style="background-color: #e2e4ec">
-            <img class="img_post" src="./images/conejo.jpeg" alt="gato muy gracioso" />
+            <img class="img_post" src="./images/conejo.jpeg" alt="conejito" />
             <p class="text_post">El mejor amigo del mago</p>
-            <p style="font-size: 90%; text-align: center;margin-top: 0;">@esponjoso</p>
+            <p style="font-size: 90%; text-align: center;margin-top: 0;"><a class="enlace" href="profile5.html">@esponjoso</a> </p>
             <p class="text_post2">
               <b>DESCRIPCIÓN: </b>
               <br>
@@ -385,7 +385,7 @@
           <div class="div_art" style="background-color: #ffd6d4">
             <img class="img_post" src="./images/gallo.jpeg" alt="gato muy gracioso" />
             <p class="text_post">El Gallo Gargallo</p>
-            <p style="font-size: 90%; text-align: center;margin-top: 0;">@kukuruku</p>
+            <p style="font-size: 90%; text-align: center;margin-top: 0;"> <a class="enlace" href="profile6.html">@kukuruku</a> </p>
             <p class="text_post2">
               <b>DESCRIPCIÓN: </b>
               <br>
@@ -432,7 +432,7 @@
           <div class="div_art" style="background-color: #fff7d3">
             <img class="img_post" src="./images/gato.jpg" alt="gato muy gracioso" style="width: 450px;" />
             <p class="text_post">Cariñoso y empalagoso</p>
-            <p style="font-size: 90%; text-align: center;margin-top: 0;"><a id="zion" href="profile.html">@peluditoblandito</a></p>
+            <p style="font-size: 90%; text-align: center;margin-top: 0;"><a  class="enlace" href="profile.html">@peluditoblandito</a></p>
             <p class="text_post2">
               <b>DESCRIPCIÓN: </b>
               <br>
